tests/expected/function-contract/missing_contract_for_check.expected
error: Could not find a contract to check for target of `proof_for_contract` attribute
  |
7 | #[kani::proof_for_contract(no_contract)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: Expected a contract on this function
  |
5 | fn no_contract() {}
